# porydex

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  generate.py  porydex.py  pyproject.toml  requirements.txt
custom_headers/: level_up_learnsets.h
porydex/: common.py  config.py  cpp_args.py  model.py  porydex.py  showdown.py  test.py
porydex/parse/: __init__.py  abilities.py  encounters.py  form_tables.py  items.py  learnsets.py  maps.py  moves.py  national_dex.py  species.py  utils.py
site/: index.html
site/config/: config.js
site/data/: README.md  abilities.js  abilities.json  encounters.js  encounters.json  items.js  learnsets.js  learnsets.json  moves.js  moves.json  search-index.js  species.js  species.json  typechart.js  typechart.json  vanilla_items.js  vanilla_moves.js
site/js/: battle-dex-search.js  battledata.js  pokedex-encounters.js  pokedex-moves.js  pokedex-pokemon.js  pokedex-search.js  pokedex.js  router.js  search.js
vanilla/: abilities.json  items.json  moves.json
