[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/tests"]

[project]
name = "porydex"
version = "0.1.0"
description = "Utilities for Data Extraction from pokeemerald-expansion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.*",
    "toml==0.10.*",
    "tqdm==4.66.*",
    "xdg-base-dirs==6.0.*",
]

[project.optional-dependencies]
develop = [
    # lint-related
    "pylint==2.17.4",
    "black==23.3.0",
    "isort==5.12.0",
    # test-related
    "pytest==6.2.5",
]

[project.scripts]
porydex = "porydex.porydex:main"

[tool.black]
line-length = 140
target-version = ['py38']

[tool.isort]
profile = 'black'
